bindBufferRange must do the same validation as bindBufferBase.

Bug: 819044
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I3d7cf99b0785198c8906f4bf43d3fa072c565b4b
Reviewed-on: https://chromium-review.googlesource.com/950462
Commit-Queue: James Darpinian <jdarpinian@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542358}
Former-commit-id: a2dd5d7e301241b77a91a9adfda1b05c65710708